--- a/src/app/pages/cadastrar-lote-vacina/cadastrar-lote-vacina.component.html
+++ b/src/app/pages/cadastrar-lote-vacina/cadastrar-lote-vacina.component.html
@@ -1,38 +1,58 @@
-<form class="container-sm p-4 my-5 bg-white">
+<!-- <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
 
-    <h2>Cadastrar Lote de Vacinas</h2>
+  <h2>Cadastrar Lote</h2>
 
-    <div class="form-group">
-        <label for="idVacina" style="float: left;">Vacina:</label>
-        <input type="text" class="form-control" id="idVacina">
+  <div class="form-group">
+    <label for="codigo" style="float: left;">Código do lote:</label>
+    <input type="text" class="form-control" id="codigo" formControlName="codigo" [class]="(submitted && formulario.get('codigo').errors) ||
+            (formulario.get('codigo').errors && formulario.get('codigo').dirty) ? 'is-invalid' :
+            formulario.get('codigo').dirty ? 'is-valid' : ''" />
+    <div *ngIf="formulario.get('codigo').errors?.required" class="invalid-feedback">Código do lote é obrigatório</div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group  col-md-6">
+      <label for="dataFabricacao" style="float: left;">Data de Fabricação:</label>
+      <input type="date" class="form-control" id="dataFabricacao" formControlName="dataFabricacao" [class]="(submitted && formulario.get('dataFabricacao').errors) ||
+            (formulario.get('dataFabricacao').errors && formulario.get('dataFabricacao').dirty) ? 'is-invalid' :
+            formulario.get('dataFabricacao').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('dataFabricacao').errors?.required" class="invalid-feedback">Data de Nascimento é obrigatório</div>
     </div>
-
-    <div class="form-group">
-        <label for="idLote" style="float: left;">Número do lote:</label>
-        <input type="text" class="form-control" id="idLote">
+    <div class="form-group  col-md-6">
+      <label for="quantidade" style="float: left;">Quantidade:</label>
+      <input type="number" class="form-control" id="quantidade" formControlName="quantidade" [class]="(submitted && formulario.get('quantidade').errors) ||
+            (formulario.get('quantidade').errors && formulario.get('quantidade').dirty) ? 'is-invalid' :
+            formulario.get('quantidade').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('quantidade').errors?.required" class="invalid-feedback">Quantidade é obrigatório</div>
     </div>
+  </div>
 
-    <div class="form-group">
-        <label for="idAmpola" style="float: left;">Quantidade de Ampolas:</label>
-        <input type="text" class="form-control" id="idAmpola">
+  <div class="form-row">
+    <div class="form-group  col-md-6">
+      <label for="dataValidade" style="float: left;">Data de Validade:</label>
+      <input type="date" class="form-control" id="dataValidade" formControlName="dataValidade" [class]="(submitted && formulario.get('dataValidade').errors) ||
+            (formulario.get('dataValidade').errors && formulario.get('dataValidade').dirty) ? 'is-invalid' :
+            formulario.get('dataValidade').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('dataValidade').errors?.required" class="invalid-feedback">Data de Validade é obrigatório</div>
     </div>
+    <div class="form-group  col-md-6">
+      <label for="dataEntrada" style="float: left;">Data de Entrada:</label>
+      <input type="date" class="form-control" id="dataEntrada" formControlName="dataEntrada" [class]="(submitted && formulario.get('dataEntrada').errors) ||
+            (formulario.get('dataEntrada').errors && formulario.get('dataEntrada').dirty) ? 'is-invalid' :
+            formulario.get('dataEntrada').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('dataEntrada').errors?.required" class="invalid-feedback">Data de Entrada é obrigatório</div>
+    </div>
+  </div>
 
-    <div class="form-group">
-        <label for="idData" style="float: left;">Data:</label>
-        <input type="date" class="form-control" id="idData">
-    </div>
 
-    <div class="form-group">
-        <label for="idRecebido" style="float: left;">Profissional que Recebeu:</label>
-        <input type="text" class="form-control" id="idRecebido">
-    </div>
 
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
-        </div>
-        <div class="form-group col-md-6">
-            <button routerLink="" type="submit" class="btn btn-success entrar col-12">Cadastrar</button>
-        </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
     </div>
-</form>
+    <div class="form-group col-md-6">
+      <button type="submit" class="btn btn-success entrar col-12">Cadastrar</button>
+    </div>
+  </div>
+
+</form> -->
