--- a/src/app/pages/posto/cadastrar-posto/cadastrar-posto.component.html
+++ b/src/app/pages/posto/cadastrar-posto/cadastrar-posto.component.html
@@ -1,4 +1,4 @@
-<form class="container-sm p-4 mt-5 bg-white"  (ngSubmit)="cadastrar()">
+<form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
 
   <h2>Cadastrar Posto</h2>
 
@@ -11,18 +11,18 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="cpfRne" style="float: left;">CNPJ:</label>
-      <input type="text" class="form-control" id="cnpjRne" formControlName="cnpjRne" [class]="(submitted && formulario.get('cnpjRne').errors) ||
-            (formulario.get('cnpjRne').errors && formulario.get('cnpjRne').dirty) ? 'is-invalid' :
-            formulario.get('cnpjRne').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('cnpjRne').errors?.required" class="invalid-feedback">CNPJ é obrigatório</div>
+      <label for="cnes" style="float: left;">CNES:</label>
+      <input type="text" class="form-control" id="cnes" formControlName="cnes" [class]="(submitted && formulario.get('cnes').errors) ||
+            (formulario.get('cnes').errors && formulario.get('cnes').dirty) ? 'is-invalid' :
+            formulario.get('cnes').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('cnes').errors?.required" class="invalid-feedback">CNES é obrigatório</div>
     </div>
     <div class="form-group col-md-6">
-      <label for="cartaoSus" style="float: left;">Cartão SUS:</label>
-      <input type="text" class="form-control" id="cartaoSus" formControlName="cartaoSus" [class]="(submitted && formulario.get('cartaoSus').errors) ||
-            (formulario.get('cartaoSus').errors && formulario.get('cartaoSus').dirty) ? 'is-invalid' :
-            formulario.get('cartaoSus').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('cartaoSus').errors?.required" class="invalid-feedback">Cartão SUS é obrigatório</div>
+      <label for="telefone">Telefone:</label>
+      <input type="tel" class="form-control" id="telefone" formControlName="telefone" mask="(99)99999-9999" [class]="(submitted && formulario.get('telefone').errors) ||
+            (formulario.get('telefone').errors && formulario.get('telefone').dirty) ? 'is-invalid' :
+            formulario.get('telefone').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('telefone').errors?.required" class="invalid-feedback">Telefone é obrigatório</div>
     </div>
   </div>
 
@@ -82,49 +82,12 @@
   </div>
 
   <div class="form-row">
-    <div class="form-group col-md-4">
-      <label for="email">E-mail de contato:</label>
-      <input type="email" class="form-control" id="email" formControlName="email" [class]="(submitted && formulario.get('email').errors) ||
-            (formulario.get('email').errors && formulario.get('email').dirty) ? 'is-invalid' :
-            formulario.get('email').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('email').errors?.email" class="invalid-feedback">Digite um e-mail válido</div>
-    </div>
-    <div class="form-group col-md-4">
-      <label for="telefone">Telefone:</label>
-      <input type="tel" class="form-control" id="telefone" formControlName="telefone" mask="(99)99999-9999" [class]="(submitted && formulario.get('telefone').errors) ||
-            (formulario.get('telefone').errors && formulario.get('telefone').dirty) ? 'is-invalid' :
-            formulario.get('telefone').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('telefone').errors?.required" class="invalid-feedback">Telefone é obrigatório</div>
-    </div>
-  </div>
-
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="senha">Senha:</label>
-      <input type="password" class="form-control" id="senha" formControlName="senha" [class]="(submitted && formulario.get('senha').errors) ||
-            (formulario.get('senha').errors && formulario.get('senha').dirty) ? 'is-invalid' :
-            formulario.get('senha').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('senha').errors?.required" class="invalid-feedback">Senha é obrigatório</div>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="confirmacaoSenha">Confirmação de Senha:</label>
-      <input type="password" class="form-control" id="confirmacaoSenha" formControlName="confirmacaoSenha" [class]="(submitted && formulario.get('confirmacaoSenha').errors) ||
-            (formulario.get('confirmacaoSenha').errors && formulario.get('confirmacaoSenha').dirty) ||
-            (senhasDiferentes()) ? 'is-invalid' :
-            (formulario.get('confirmacaoSenha').dirty && senhasIguais()) ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('confirmacaoSenha').errors?.required" class="invalid-feedback">A confirmação da senha é
-        obrigatória</div>
-      <div *ngIf="senhasDiferentes()" class="invalid-feedback">A confirmação da senha precisa ser igual a senha</div>
-    </div>
-  </div>
-
-  <div class="form-row">
     <div class="form-group col-md-6">
       <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
     </div>
     <div class="form-group col-md-6">
-      <button type="submit" class="btn btn-success entrar col-12"
-        [class]="operacao ? 'btn-primary' : 'btn-success'"> Salvar
+      <button type="submit" class="btn btn-success entrar col-12" [class]="operacao ? 'btn-primary' : 'btn-success'">
+        Salvar
       </button>
     </div>
   </div>
